# curl-impersonate-lexiforest

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  Dockerfile.template  INSTALL.md  LICENSE  Makefile.in  README.md  browsers.json  configure  configure.ac  curl_impersonate_playground.ipynb
.github/: FUNDING.yaml
.github/workflows/: build-and-test-docker.yml  build-and-test-make.yml  build-and-test.yml  build-push-docker.yml  build-win.yaml  build.yml  publish-docker-image.yml  release.yml  test.yml
chrome/: Dockerfile  Dockerfile.alpine  curl_chrome100  curl_chrome100.bat  curl_chrome101  curl_chrome101.bat  curl_chrome104  curl_chrome104.bat  curl_chrome107  curl_chrome107.bat  curl_chrome110  curl_chrome110.bat  curl_chrome116  curl_chrome116.bat  curl_chrome119  curl_chrome119.bat  curl_chrome120  curl_chrome120.bat  curl_chrome123  curl_chrome123.bat  curl_chrome124  curl_chrome124.bat  curl_chrome131  curl_chrome131.bat  curl_chrome131_android  curl_chrome131_android.bat  curl_chrome133a  curl_chrome133a.bat  curl_chrome99  curl_chrome99.bat  curl_chrome99_android  curl_chrome99_android.bat  curl_edge101  curl_edge101.bat  curl_edge99  curl_edge99.bat  curl_firefox120  curl_firefox133  curl_firefox133.bat  curl_firefox135  (+13 more)
chrome/patches/: boringssl-old-ciphers.patch  boringssl.patch  curl-impersonate.patch
docker/: alpine.dockerfile  debian.dockerfile  dockerfile.mustache  generate.sh
docs/: 01_GETTING_STARTED.md  01_introduction.md  02_USAGE.md  02_install.md  03_LIBCURL_IMPERSONATE.md  03_LIBCURL_IMPERSONATE_PYTHON.md  03_usage.md  04_libcurl.md  05_with_python.md  07_with_php.md  Makefile  NOTES_FOR_ANDROID.md  README.md  api.rst  bindings.rst  building.rst  changelog.rst  conf.py  dev.rst  faq.rst  fingerprints.rst  index.rst  install.rst  pro.rst  pyproject.toml  quick_start.rst
firefox/: Dockerfile  Dockerfile.alpine
patches/: OpenBSD.patch  boringssl.patch  brotli.patch  curl.patch  nghttp3.patch  ngtcp2.patch
scripts/: freebsd-vm-macos.sh  update-url-hashes.py
tests/: Dockerfile  README.md  minicurl.c  requirements.txt  targets.yaml  test_impersonate.py
tests/signatures/: README.md  chrome_124.0.6367.60.yaml  chrome_131.0.6778.81_android.yaml  chrome_131.0.6778.86.yaml  chrome_133.0.6943.55.yaml  chrome_136.0.7103.93.yaml  chrome_142.0.7444.176.yaml  firefox_133.0.3_linux.yaml  firefox_135.0.1_linux.yaml  firefox_144.0.0_linux.yaml  safari_18.0_iOS.yaml  safari_18.0_macOS.yaml  safari_18.4_iOS.yaml  safari_18.4_macOS.yaml  safari_26.0.1_macOS.yaml  safari_26.0_iOS.yaml  safari_26.0_macOS.yaml  tor_14.5_macOS.yaml
win/: build.bat  build.sh  deps.patch  deps.sh
zigshim/: cc  cxx
